--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,6 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'org.jetbrains:annotations:15.0'
     testImplementation 'junit:junit:4.+'
@@ -43,8 +42,18 @@ dependencies {
     // RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    // Material Desing
-    implementation 'com.google.android.material:material:1.1.0'
+    // Material Design
+    implementation 'com.google.android.material:material:1.3.0'
+
+    // MultiDex
+    implementation 'com.android.support:multidex:1.0.3'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+
+    // Swipe Refresh Layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     //Firebase
     implementation 'com.google.firebase:firebase-messaging:22.0.0'
