--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,15 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activities.activities.ContactaActivity" />
         <activity android:name=".activities.activities.IniciarSesion">
+
+        </activity>
+        <activity android:name=".activities.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.activities.MainActivity" />
 
         <service android:name=".activities.firebase.MensajeServices"
             android:exported="false">
