--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ allprojects {
     repositories {
         google()
         jcenter() // Warning: this repository is going to shut down soon
+        maven {
+            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
+        }
     }
 }
 
