--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.VideoMeeting"
+        android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".activities.activities.OutgoingInvitationActivity"
-            android:screenOrientation="portrait"
-            ></activity>
-        <activity android:name=".activities.activities.IncomingInvitationActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.activities.Prueba"></activity>
+        <activity
+            android:name=".activities.activities.OutgoingInvitationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.activities.IncomingInvitationActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".activities.activities.ContactaActivity" />
-        <activity android:name=".activities.activities.IniciarSesion">
-
-        </activity>
+        <activity android:name=".activities.activities.IniciarSesion"></activity>
         <activity android:name=".activities.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,10 +32,11 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".activities.firebase.MensajeServices"
+        <service
+            android:name=".activities.firebase.MensajeServices"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
